# gtest-runner

./: .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: check.yml
src/: gtest.rs  main.rs
src/gtest/: exec.rs  lib.rs  mod.rs  opt.rs  parse.rs
src/gtest_runner/: mod.rs
tests/: dummy_gtest_executable.rs  integration.rs
