[package]
name = "gtest-runner"
categories = ["command-line-utilities"]
description = "Run gtest executables in parallel"
homepage = "https://github.com/bbannier/gtest-runner"
license = "MIT"
version = "0.0.18"
readme = "README.md"
authors = ["Benjamin Bannier <bbannier@gmail.com>"]
edition = "2018"

[[bin]]
name = "gtest-runner"
path = "src/main.rs"

[dependencies]
console = "0.15"
indicatif = "0.17"
num_cpus = "1.14"
regex = "1.7"
rs_tracing = { version = "1.0", features = ["rs_tracing"] }
crossbeam = "0.8"
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive", "env"] }
tracing-chrome = "0.7.0"
tracing-subscriber = { version = "0.3.16", features = ["tracing-log"], default-features = false }
tracing = "0.1.37"

[dev-dependencies]
itertools = "0.10"
