[package]
name = "gtest-runner"
categories = ["command-line-utilities"]
description = "Run gtest executables in parallel"
homepage = "https://github.com/bbannier/gtest-runner"
license = "MIT"
version = "0.0.18"
readme = "README.md"
authors = ["Benjamin Bannier <bbannier@gmail.com>"]
edition = "2018"

[[bin]]
name = "gtest-runner"
path = "src/main.rs"

[dependencies]
console = { default-features = false, version = "0.15" }
indicatif = { default-features = false, version = "0.17" }
regex = { features = ["std", "unicode-perl"], default-features = false, version = "1.7" }
rs_tracing = { version = "1.1.0", default-features = false, features = ["rs_tracing"] }
crossbeam = "0.8"
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["std", "derive", "env"], default-features = false }
tracing = { default-features = false, version = "0.1.37" }

[dev-dependencies]
itertools = "0.10"
